# antire

stripBinary/src/: stripBinary.cpp
trouble/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
trouble/src/: trouble.c
